--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Ristorante Con Fusion</title>
 </head>
 
@@ -107,14 +107,14 @@
 		</div>
 
 		<div class="row row-content align-items-center" id="myCard">
-			<div class="col-12 col-sm-8 offset-2">
+			<div class="col-12 col-md-8 offset-md-2">
 				<div class="card">
 					<h3 class="card-header bg-warning text-white">Reserve a Table</h3>
 					<div class="card-body">
 						<form>
 							<div class="form-group row">
-								<label for="noGuests" class="col-sm-2 col-form-label">Number of Guests</label>
-								<div class="col-md-10">
+								<label for="noGuests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+								<div class=" col-12 col-sm-10">
 									<div class="form-check form-check-inline">
 										<input class="form-check-input" type="radio" name="guestno" id="guest1" value="guest1">
 										<label class="form-check-label form-check-inline" for="guest1">1</label>
@@ -132,16 +132,16 @@
 								</div>
 							</div>
 							<div class="form-group row">
-								<label for="datetime" class="col-12 col-md-2 col-form-label">Date and Time</label>
-								<div class="col-5 col-md-3">
+								<label for="datetime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+								<div class="col-12 col-sm-3">
 									<input type="text" placeholder="Date" class="form-control" name="date" id="date">
 								</div>
-								<div class="col-7 col-md-3">
+								<div class="col-12 col-sm-3">
 									<input type="text" placeholder="Time" class="form-control" name="time" id="time">
 								</div>
 							</div>
 							<div class="form-group row">
-								<div class="col-12 col-md-10 offset-2">
+								<div class="col-12 col-sm-10 offset-sm-2">
 									<button type="submit" class="btn btn-primary">Reserve</button>
 								</div>
 							</div>
