--- a/index.html
+++ b/index.html
@@ -72,6 +72,69 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="reserveModal" class="modal fade" role="dialog">
+		<div class="modal-dialog modal-lg" role="content">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Reserve a Table</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group row">
+							<label for="noGuests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+							<div class="col-12 col-sm-10">
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="radio" name="guestno" id="guest1" value="guest1">
+									<label class="form-check-label form-check-inline" for="guest1">1</label>
+									<input class="form-check-input" type="radio" name="guestno" id="guest2" value="guest2">
+									<label class="form-check-label form-check-inline" for="guest2">2</label>
+									<input class="form-check-input" type="radio" name="guestno" id="guest3" value="guest3">
+									<label class="form-check-label form-check-inline" for="guest3">3</label>
+									<input class="form-check-input" type="radio" name="guestno" id="guest4" value="guest4">
+									<label class="form-check-label form-check-inline" for="guest4">4</label>
+									<input class="form-check-input" type="radio" name="guestno" id="guest5" value="guest5">
+									<label class="form-check-label form-check-inline" for="guest5">5</label>
+									<input class="form-check-input" type="radio" name="guestno" id="guest6" value="guest6">
+									<label class="form-check-label form-check-inline" for="guest6">6</label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="restSection" class="col-12 col-sm-2 col-form-label">Section</label>
+							<div class="col-12 col-sm-10">
+								<div class="btn-group btn-group-toggle" data-toggle="buttons">
+									<label class="btn btn-success active">
+										<input type="radio" name="restSection" value="nonSmoking" checked>Non-Smoking
+									</label>
+									<label class="btn btn-danger">
+										<input type="radio" name="restSecion" value="smoking">Smoking
+									</label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="datetime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+							<div class="col-12 col-sm-3">
+								<input type="text" placeholder="Date" class="form-control" name="date" id="date">
+							</div>
+							<div class="col-12 col-sm-3">
+								<input type="text" placeholder="Time" class="form-control" name="time" id="time">
+							</div>
+						</div>
+						<div class="form-group row">
+							<div class="col-12 col-sm-10 offset-sm-2">
+								<button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+								<button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<header class="jumbotron">
 		<div class="container">
 			<div class="row row-header">
@@ -83,8 +146,16 @@
 					<img src="img/logo.png" class="img-fluid">
 				</div>
 				<div class="col-12 col-sm align-self-center">
+					<a role="button" href="#myCard" class="btn btn-warning nav-link btn-lg btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+				</div>
+				<!--
+
+***** Tooltip on Button *****
+
+				<div class="col-12 col-sm align-self-center">
 					<a role="button" href="#myCard" class="btn btn-warning nav-link btn-lg btn-block" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom">Reserve Table</a>
 				</div>
+-->
 			</div>
 		</div>
 	</header>
@@ -192,6 +263,10 @@
 			</div>
 		</div>
 
+		<!--
+
+***** Form as a Card *****
+
 		<div class="row row-content align-items-center" id="myCard">
 			<div class="col-12 col-md-8 offset-md-2">
 				<div class="card">
@@ -200,7 +275,7 @@
 						<form>
 							<div class="form-group row">
 								<label for="noGuests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-								<div class=" col-12 col-sm-10">
+								<div class="col-12 col-sm-10">
 									<div class="form-check form-check-inline">
 										<input class="form-check-input" type="radio" name="guestno" id="guest1" value="guest1">
 										<label class="form-check-label form-check-inline" for="guest1">1</label>
@@ -214,6 +289,19 @@
 										<label class="form-check-label form-check-inline" for="guest5">5</label>
 										<input class="form-check-input" type="radio" name="guestno" id="guest6" value="guest6">
 										<label class="form-check-label form-check-inline" for="guest6">6</label>
+									</div>
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="restSection" class="col-12 col-sm-2 col-form-label">Section</label>
+								<div class="col-12 col-sm-10">
+									<div class="btn-group btn-group-toggle" data-toggle="buttons">
+										<label class="btn btn-success active">
+											<input type="radio" name="restSection" value="nonSmoking" checked>Non-Smoking
+										</label>
+										<label class="btn btn-danger">
+											<input type="radio" name="restSecion" value="smoking">Smoking
+										</label>
 									</div>
 								</div>
 							</div>
@@ -236,6 +324,7 @@
 				</div>
 			</div>
 		</div>
+-->
 	</div>
 
 	<footer class="footer">
@@ -283,12 +372,13 @@
 	<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 	<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<!--
 	<script>
 		$(document).ready(function() {
 			$('[data-toggle="tooltip"]').tooltip();
 		});
-
 	</script>
+-->
 </body>
 
 </html>
