--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
 					<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
 						<span class="carousel-control-next-icon"></span>
 					</a>
+					<div class="btn-group" id="carouselButton">
+						<button class="btn btn-danger btn-sm" id="carousel-pause">
+							<span class="fa fa-pause"></span>
+						</button>
+						<button class="btn btn-danger btn-sm" id="carousel-play">
+							<span class="fa fa-play"></span>
+						</button> 
+					</div>
 				</div>
 			</div>
 		</div>
@@ -372,6 +380,17 @@
 	<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 	<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script>
+		$(document).ready(function() {
+			$('#myCarousel').carousel({interval: 2000});
+			$('#carousel-pause').click(function() {
+				$('#myCarousel').carousel('pause');
+			});
+			$('#carousel-play').click(function() {
+				$('#myCarousel').carousel('cycle');
+			});
+		});
+	</script>
 	<!--
 	<script>
 		$(document).ready(function() {
